# AutoCar_proj

./: .gitignore  README.md
0_control_sensor_test/: CameraServo.c  controlSensor  controlSensor.c  controlSensor.h  stop  stop.c  test.c  test_final  test_speed_control  test_speed_control_kp=1  test_speed_control_kp=10  test_speed_control_nogain  velocity  velocity.c
10_United_Code/: koo_driving.c  koo_driving.h  main.c  missionAct.c
1_camera_dump_disp/: camera_dump_disp  display-kms.lo  input_cmd.lo  main.c  util.lo  v4l2.lo
2_camera_vpe_dump_disp/: camera_vpe_dump_disp  display-kms.lo  input_cmd.lo  util.lo  v4l2.lo  vpe-common.lo
3_camera_overlay_draw_disp/: camera_overlay_draw_disp  display-kms.lo  drawing.lo  exam_cv.cpp  exam_cv.lo  input_cmd.lo  util.lo  v4l2.lo  vpe-common.c  vpe-common.lo
5_opencv_disp/: display-kms.lo  drawing.lo  exam_cv.lo  input_cmd.lo  jpeg_utils.c  jpeg_utils.h  jpeg_utils.lo  opencv_disp  util.lo
6_camera_opencv_disp/: .Makefile.swp  .exam_cv.cpp.swp  .stop_when_accident.cpp.swp  Makefile  camera_opencv_disp  display-kms.lo  drawing.lo  exam_cv.cpp  exam_cv.h  exam_cv.lo  input_cmd.lo  main.c  stop_when_accident.cpp  stop_when_accident.lo  util.lo  v4l2.lo  vpe-common.lo
7/: CameraServo  CameraServo.c  Makefile  car_lib.c
8_movingObstacle/: Makefile  controlSensor.c
9_dy_jh_0930/: Makefile  controlSensor.c
car/: .Makefile.swp  .stop_when_accident.cpp.swp  Makefile  stop_when_accident.cpp
laneTrace/: .exam_cv.cpp.swp  .main.c.swp  Makefile  (+29 more)
lanedetection/: CMakeLists.txt  laneDetection.cpp  laneDetection.h  main.cpp
(+62 files in other folders)
